[0, 15, 83]: 2019-01-02
  - fix for bug in roundtripping aliases used as key (reported via email by Zaloo)

[0, 15, 82]: 2018-12-28
  - anchors and aliases on scalar int, float, string and bool are now preserved. Anchors
    do not need a referring alias for these (reported by 
    `Alex Harvey <https://bitbucket.org/alexharv074/>`__)
  - anchors no longer lost on tagged objects when roundtripping (reported by `Zaloo 
    <https://bitbucket.org/zaloo/>`__)

[0, 15, 81]: 2018-12-06
 - fix issue saving methods of metaclass derived classes (reported and fix provided
   by `Douglas Raillard <https://bitbucket.org/DouglasRaillard/>`__)

[0, 15, 80]: 2018-11-26
 - fix issue emitting BEL character when round-tripping invalid folded input
   (reported by Isaac on `StackOverflow <https://stackoverflow.com/a/53471217/1307905>`__)
    
[0, 15, 79]: 2018-11-21
  - fix issue with anchors nested deeper than alias (reported by gaFF on
    `StackOverflow <https://stackoverflow.com/a/53397781/1307905>`__)

[0, 15, 79]: 2018-11-21
  - fix issue with anchors nested deeper than alias (reported by gaFF on
    `StackOverflow <https://stackoverflow.com/a/53397781/1307905>`__)

[0, 15, 78]: 2018-11-15
  - fix setup issue for 3.8 (reported by `Sidney Kuyateh 
    <https://bitbucket.org/autinerd/>`__)

[0, 15, 77]: 2018-11-09
  - setting `yaml.sort_base_mapping_type_on_output = False`, will prevent
    explicit sorting by keys in the base representer of mappings. Roundtrip
    already did not do this. Usage only makes real sense for Python 3.6+
    (feature request by `Sebastian Gerber <https://bitbucket.org/spacemanspiff2007/>`__).
  - implement Python version check in YAML metadata in ``_test/test_z_data.py``

[0, 15, 76]: 2018-11-01
  - fix issue with empty mapping and sequence loaded as flow-style
    (mapping reported by `Min RK <https://bitbucket.org/minrk/>`__, sequence
    by `Maged Ahmed <https://bitbucket.org/maged2/>`__)

[0, 15, 75]: 2018-10-27